--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.0.18", features = ["derive"] }
+human-sort = "0.2.2"
 indicatif = "0.17.1"
 question = "0.2.2"
 uuid = { version = "1.2.1", features = ["v4"] }
