--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ indicatif = "0.17.1"
 question = "0.2.2"
 uuid = { version = "1.2.1", features = ["v4"] }
 walkdir = "2.3.2"
+zip = "0.6.3"
 
 [profile.release]
 lto = true
