--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ colored = "2.0.0"
 execute = "0.2.11"
 indicatif = "0.17.1"
 question = "0.2.2"
+rayon = "1.8.0"
 uuid = { version = "1.2.1", features = ["v4"] }
 walkdir = "2.3.2"
 zip = "0.6.3"
