chore: Fix rust -> cargo

--- a/renovate.json
+++ b/renovate.json
@@ -30,7 +30,7 @@
       "groupName": "github actions deps"
     },
     {
-      "matchManagers": "rust",
+      "matchManagers": "cargo",
       "matchUpdateTypes": [
         "patch",
         "minor"
